--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.7"
 services:
   keepnote:
     image: keepnote
+    container_name: keepnote
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - /home/drasey/docs/notes/keepnote/babbee/:/home/keepnote/babbee/
-      - /home/drasey/.config/keepnote:/home/keepnote/.config/keepnote
-    container_name: keepnote
+      - ~/keepnote/my_notes/:/home/keepnote/my_notes/
+      - ~/.config/keepnote:/home/keepnote/.config/keepnote
     environment:
       - DISPLAY=unix$DISPLAY
-    entrypoint: keepnote babbee
+    entrypoint: keepnote my_notes
 
